moved application to domain + fixed unavailabilityList for employee