@@ -1,6 +1,8 @@
 package pw.edu.pl.workscheduler.infrastructure.repository.entities;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import pw.edu.pl.workscheduler.domain.dto.EmployeeDTO;
 import pw.edu.pl.workscheduler.domain.dto.ScheduleDTO;
@@ -17,13 +19,13 @@ public class EntityMapper {
         }
         scheduleEntity.setScheduleMonth(scheduleDTO.getMonth());
         scheduleEntity.setShiftDays(
-                scheduleDTO.getShiftDays().stream()
-                        .map(EntityMapper::toEntity)
-                        .collect(Collectors.toList()));
+            scheduleDTO.getShiftDays().stream()
+                .map(EntityMapper::toEntity)
+                .collect(Collectors.toList()));
         scheduleEntity.setEmployeeList(
-                scheduleDTO.getEmployeeList().stream()
-                        .map(EntityMapper::toEntity)
-                        .collect(Collectors.toList()));
+            scheduleDTO.getEmployeeList().stream()
+                .map(EntityMapper::toEntity)
+                .collect(Collectors.toList()));
 
         return scheduleEntity;
     }
@@ -31,9 +33,9 @@ public class EntityMapper {
     public static ShiftDayEntity toEntity(ShiftDayDTO shiftDayDTO) {
         ShiftDayEntity shiftDayEntity = new ShiftDayEntity();
         shiftDayEntity.setShiftsForADay(
-                shiftDayDTO.getShiftsForADay().stream()
-                        .map(EntityMapper::toEntity)
-                        .collect(Collectors.toList()));
+            shiftDayDTO.getShiftsForADay().stream()
+                .map(EntityMapper::toEntity)
+                .collect(Collectors.toList()));
         shiftDayEntity.setDate(shiftDayDTO.getDate());
 
         return shiftDayEntity;
@@ -62,32 +64,32 @@ public class EntityMapper {
 
     public static ScheduleDTO toScheduleDTO(ScheduleEntity scheduleEntity) {
         return new ScheduleDTO(
-                scheduleEntity.getId(),
-                scheduleEntity.getScheduleMonth(),
-                scheduleEntity.getShiftDays().stream()
-                        .map(EntityMapper::toShiftDayDTO)
-                        .collect(Collectors.toList()),
-                scheduleEntity.getEmployeeList().stream()
-                        .map(EntityMapper::toEmployeeDTO)
-                        .collect(Collectors.toList()));
+            scheduleEntity.getId(),
+            scheduleEntity.getScheduleMonth(),
+            scheduleEntity.getShiftDays().stream()
+                .map(EntityMapper::toShiftDayDTO)
+                .collect(Collectors.toList()),
+            scheduleEntity.getEmployeeList().stream()
+                .map(EntityMapper::toEmployeeDTO)
+                .collect(Collectors.toList()));
     }
 
     public static ShiftDayDTO toShiftDayDTO(ShiftDayEntity shiftDayEntity) {
 
         return new ShiftDayDTO(
-                shiftDayEntity.getDate(),
-                shiftDayEntity.getShiftsForADay().stream()
-                        .map(EntityMapper::toShiftDTO)
-                        .collect(Collectors.toList()));
+            shiftDayEntity.getDate(),
+            shiftDayEntity.getShiftsForADay().stream()
+                .map(EntityMapper::toShiftDTO)
+                .collect(Collectors.toList()));
     }
 
     public static ShiftDTO toShiftDTO(ShiftEntity shiftEntity) {
 
         return new ShiftDTO(
-                shiftEntity.getStartTime(),
-                shiftEntity.getEndTime(),
-                //                toEmployeeDTO(shiftEntity.getEmployee()));
-                null);
+            shiftEntity.getStartTime(),
+            shiftEntity.getEndTime()
+            //                toEmployeeDTO(shiftEntity.getEmployee()));
+        );
     }
 
     public static EmployeeDTO toEmployeeDTO(EmployeeEntity employeeEntity) {
@@ -96,12 +98,12 @@ public class EntityMapper {
         //            employee.setId(employeeEntity.getId());
         //            employee.setName(employeeEntity.getName());
         //            employee.setUnavailabilityList(
-        //                    employeeEntity.getUnavailabilityList().stream().toList());
+        //                    employeeEntity.getUnavailabilityList().stream().collect(java.util.stream.Collectors.toList()));
         //            if (employeeEntity.getShifts() != null) {
         //                employee.setShifts(
         //                        employeeEntity.getShifts().stream()
         //                                .map(this::toDomain)
-        //                                .collect(Collectors.toList()));
+        //                                .collect(java.util.stream.Collectors.toList()));
         //            }
         //        }
 
@@ -109,21 +111,22 @@ public class EntityMapper {
             return null;
         }
         return new EmployeeDTO(
-                employeeEntity.getId(),
-                employeeEntity.getName(),
-                getUnavailabilityList(employeeEntity),
-                getShifts(employeeEntity));
+            employeeEntity.getId(),
+            employeeEntity.getName(),
+            getUnavailabilityList(employeeEntity),
+            getShifts(employeeEntity));
     }
 
-    private static List<TimeFrameDTO> getUnavailabilityList(EmployeeEntity employeeEntity) {
+    private static Set<TimeFrameDTO> getUnavailabilityList(EmployeeEntity employeeEntity) {
         return employeeEntity.getUnavailabilityList() == null
-                ? null
-                : employeeEntity.getUnavailabilityList().stream().toList();
+            ? null
+            : new HashSet<>(employeeEntity.getUnavailabilityList());
     }
 
     private static List<ShiftDTO> getShifts(EmployeeEntity employeeEntity) {
         return employeeEntity.getShifts() == null
-                ? null
-                : employeeEntity.getShifts().stream().map(EntityMapper::toShiftDTO).toList();
+            ? null
+            : employeeEntity.getShifts().stream().map(EntityMapper::toShiftDTO)
+                .collect(Collectors.toList());
     }
 }
